# humanoid

./: .gitignore  DaMiaoMotor.hpp  README.md  can_communication.cpp  can_modify_register.sh  fdcan_setup.sh
humanoid_control/: CMakeLists.txt  package.xml
humanoid_control/models/: policy.pt
humanoid_control/scripts/: policy_node.py
humanoid_control/src/: control_node.cpp
humanoid_description/: CMakeLists.txt  package.xml
humanoid_description/meshes/: base_link.STL  left_ankle_link.STL  left_hip_pitch_link.STL  left_hip_roll_link.STL  left_hip_yaw_link.STL  left_knee_link.STL  right_ankle_link.STL  right_hip_pitch_link.STL  right_hip_roll_link.STL  right_hip_yaw_link.STL  right_knee_link.STL
humanoid_description/src/: joint_state_publisher.py
humanoid_description/urdf/: humanoid.urdf  urdf_v1.3.csv
humanoid_hardware/: CMakeLists.txt  package.xml
humanoid_hardware/config/: motor_params.yaml
humanoid_hardware/include/humanoid_hardware/: DaMiaoMotor.hpp  MotorAbstractionNode.hpp  MotorCtrlNode.hpp  SerialNode.hpp
humanoid_hardware/script/: CMakeLists.txt  DaMiaoMotor.cpp  fdcan_setup.sh
humanoid_hardware/src/: DaMiaoMotor.cpp  MotorAbstractionNode.cpp  MotorCtrlNode.cpp  SerialNode.cpp
humanoid_interfaces/: CMakeLists.txt  package.xml
humanoid_interfaces/msg/: MotorCommand.msg  MotorFeedback.msg  RemoteSignal.msg
humanoid_launch/: CMakeLists.txt  package.xml
humanoid_launch/launch/: display.launch.xml  humanoid_description.launch.py  humanoid_hardware.launch.py  humanoid_hardware_rviz.launch.py
humanoid_launch/rviz/: humanoid_config.rviz
